@@ -73,6 +73,7 @@ export(importMetaPhlAn)
 export(importMothur)
 export(importQIIME2)
 export(importQZA)
+export(importTaxpasta)
 export(inner_join)
 export(left_join)
 export(loadFromBiom)
@@ -381,6 +382,7 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(utils,assignInMyNamespace)
 importFrom(utils,combn)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,read.delim)
 importFrom(utils,read.table)
